# cpp-gtk-3-timer-for-linux

./: CMakeLists.txt  LICENSE  README.md  gschemas.compiled  install.sh  main.cpp  org.nhrdev.timer.gschema.xml
includes/: activate.cpp  activate.hpp  create-app.cpp  create-app.hpp  event-listeners.cpp  event-listeners.hpp  globals.cpp  globals.hpp  timer-funcs.cpp  timer-funcs.hpp  utils.cpp  utils.hpp
